--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "cache-manager-ioredis": "^2.1.0",
     "class-validator": "^0.14.2",
     "dotenv": "^16.5.0",
+    "ioredis": "^5.6.1",
     "joi": "^17.13.3",
     "mysql": "^2.18.1",
     "passport-jwt": "^4.0.1",
