--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "node dist/src/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -40,7 +40,7 @@
     "dotenv": "^16.5.0",
     "ioredis": "^5.6.1",
     "joi": "^17.13.3",
-    "mysql": "^2.18.1",
+    "mysql2": "^3.14.1",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
     "rimraf": "^6.0.1",
